# qkd-playground

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  railway.json
.claude/: launch.json
.github/workflows/: ci.yml  deploy-hf.yml  docs.yml  release.yml
backend/: README.md  hatch_build.py  pyproject.toml
backend/src/qkd_playground/: __init__.py  cli.py
backend/src/qkd_playground/adapters/: attacks.py  b92.py  bb84.py  bell_test.py  decoy_bb84.py  e91.py  key_rate.py  mdi_qkd.py  post_processing.py  qiskit_adapter.py  sarg04.py
backend/src/qkd_playground/api/: app.py
backend/src/qkd_playground/domain/: models.py  ports.py
backend/tests/: test_api.py  test_attacks.py  test_b92.py  test_bb84.py  test_bell_test.py  test_decoy_bb84.py  test_e91.py  test_eavesdropping.py  test_key_rate.py  test_mdi_qkd.py  test_noise_channels.py  test_placeholder.py  test_post_processing.py  test_sarg04.py
docs/: architecture.md  index.md
docs/protocols/: overview.md
frontend/: index.html  package.json  tsconfig.build.json  tsconfig.json  vite.config.spa.ts  vite.config.ts
frontend/src/: index.ts
frontend/src/adapters/: index.ts
frontend/src/domain/: concepts.ts  index.ts  statistics.ts
frontend/src/ui/: App.tsx  constants.ts  styles.css
frontend/src/ui/components/: BasisBadge.tsx  BellTestPanel.tsx  BitCell.tsx  BlochSphere.tsx  BlochSpherePanel.tsx  CircuitDiagram.tsx  ComparisonView.tsx  ConceptPanel.tsx  EveAlert.tsx  EvePanel.tsx  KeyEfficiencyChart.tsx  PerformancePanel.tsx  ProgressBar.tsx  QBERGauge.tsx  QubitTable.tsx  ResultsPanel.tsx  StatisticsGraphs.tsx  StatisticsPanel.tsx  index.ts
frontend/tests/: placeholder.test.ts
scripts/: record-demo.sh  record-demo.ts
